# mindmeld

./: README.md  pyproject.toml
mindmeld/: __init__.py  attribute.py  entity.py  graph.py  main.py  object.py  relationship.py
tests/: test_attribute.py  test_entity.py  test_example.py  test_graph.py  test_main.py  test_object.py  test_relationship.py
