[tool.poetry]
name = "mindmeld"
version = "0.1.0"
description = ""
authors = ["hamishgibbs <hamishgibbs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# not working - functions are not exposed
